# portfolio

./: .env.example  .gitignore  CLAUDE.md  README.md  components.json  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
backend/: .env  .env.example  Dockerfile  README.md  README_DATABASE.md  chat_requests.db  config.py  db.py  gemini_client.py  grok_client.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/src/api/: dependencies.py
backend/src/api/legacy/: router.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: __init__.py  chat.py  contact.py  health.py  projects.py
backend/src/core/: config.py  database.py  exceptions.py
backend/src/middleware/: logging.py
backend/src/models/: __init__.py  chat.py  log.py  project.py
backend/src/repositories/: chat_repository.py  log_repository.py  project_repository.py
backend/src/schemas/: chat.py  contact.py  project.py
backend/src/services/: chat_service.py  email_service.py  project_service.py  telegram_service.py
backend/src/services/ai/: base.py  gemini_provider.py  groq_provider.py
download/portfolio-enhanced/: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  package.json  pnpm-lock.yaml
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src/app/: globals.css  layout.tsx
src/components/: BlockTitle.tsx  Button.tsx  ChatWidget.tsx  ContactBlock.tsx  ContactForm.tsx  ExperienceBlock.tsx  Form.tsx  HomePage.tsx  MainGrid.tsx  (+3 more)
(+170 files in other folders)
