[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backend"
version = "1.0.0"
description = "FastAPI backend for portfolio website with AI chat assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.126.0",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.45",
    "pydantic==2.12.5",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "google-genai==1.56.0",
    "groq==1.0.0",
    "requests==2.32.5",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "email-validator==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.0",
]

[tool.setuptools]
packages = ["src"]
